<resources>
    <string name="app_name">沙企鹅</string>
    <string name="net_work_error">网络链接不畅，请检查您的网络</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="phone_number_hint">请输入您的手机号</string>
    <string name="phone_hint">请输入手机号</string>
    <string name="synopsis_hint">请输入个人简介</string>
    <string name="identification_name_hint">请输入您的姓名</string>
    <string name="pwd_hing">请输入登录密码</string>
    <string name="not_pwd">忘记密码？</string>
    <string name="browse">随便看看</string>
    <string name="msg_code">获取验证码</string>
    <string name="msg_hint">请输入验证码</string>
    <string name="register_label">注册表示同意《宠宝云商》</string>
    <string name="commit">提交</string>
    <string name="commit_order">提交订单</string>
    <string name="reset_pwd">请输入新密码(6~12位字母、数字)</string>
    <string name="reset_pwd2">请确认密码</string>
    <string name="retrieve_pwd">找回密码</string>
    <string name="reset_password">设置密码</string>
    <string name="login_phone_toast">请输入手机号</string>
    <string name="login_phone_toast2">手机号码不正确</string>
    <string name="login_pwd_toast">请输入密码</string>
    <string name="reset_name">请输入姓名</string>
    <string name="reset_remark">请填写备注</string>
    <string name="pwd_not">密码不一致</string>
    <string name="mine">个人信息</string>
    <string name="cart">购物车</string>
    <string name="mine_order">我的订单</string>
    <string name="mine_msg">我的消息</string>
    <string name="mine_subscribe">我的订阅</string>
    <string name="mine_collection">我的收藏</string>
    <string name="mine_address">我的地址</string>
    <string name="mine_install">设置</string>
    <string name="head_img">头像</string>
    <string name="name">名字</string>
    <string name="sex">性别</string>
    <string name="save">保存</string>
    <string name="personal">个人信息</string>
    <string name="update_name">修改名字</string>
    <string name="select_sex">请选择性别</string>
    <string name="about">关于</string>
    <string name="clear_location">清除缓存</string>
    <string name="exit">退出</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="pull_down_to_refresh">下拉刷新</string>
    <string name="pull_up_load_more">上拉加载更多</string>
    <string name="release_to_refresh">松开立即刷新</string>
    <string name="release_to_load_more">松开加载更多</string>
    <string name="refreshing">正在刷新...</string>
    <string name="loading_more">正在加载...</string>
    <string name="rmb">¥%1$s元</string>
    <string name="preferential_rmb">优惠减¥%1$s</string>
    <string name="rmb_none">¥%1$s</string>
    <string name="rmb_yuan">%1$s元</string>
    <string name="manager_location">管理地址</string>
    <string name="add_location">增加地址</string>
    <string name="add_locations">新增收货地址</string>
    <string name="update_locations">修改收货地址</string>
    <string name="default_location">默认地址</string>
    <string name="receiver_name">收货人</string>
    <string name="receiver_phone">联系电话</string>
    <string name="receiver_row">街道</string>
    <string name="select_location">请选择</string>
    <string name="label_location">请填写详细地址，不少于5个字</string>
    <string name="setting_default">设为默认</string>
    <string name="balance_accounts">去结算</string>
    <string name="mine_location">所在地区</string>
    <string name="search_hint">请输入关键字搜索</string>
    <string name="hot_sale">热销专题</string>
    <string name="hot_options">超值热卖</string>
    <string name="num">已售%1$s份</string>
    <string name="hot_goods">热门品牌</string>
    <string name="find">发现</string>
    <string name="none_receiver">姓名不许为空</string>
    <string name="none_receiver_phone">请填写正确的手机号码</string>
    <string name="none_receiver_city">请选择所属地区</string>
    <string name="none_receiver_content">详细地址字数不少于5个字</string>
    <string name="scan_title">防伪查询</string>
    <string name="cancel">取消</string>
    <string name="on_cancel">取消分享</string>
    <string name="search_key_label">请输入关键字搜素</string>
    <string name="clear">清除</string>
    <string name="searches">热搜</string>
    <string name="history">历史记录</string>
    <string name="sales_volume">销量</string>
    <string name="order_all">全部</string>
    <string name="goods_info">商品详情</string>
    <string name="dispatching_type">配送方式</string>
    <string name="activity_yh">优惠活动</string>
    <string name="bz">备注</string>
    <string name="count_price">总金额</string>
    <string name="order_detail">订单详情</string>
    <string name="add_house">加入购物车</string>
    <string name="finish">完成</string>
    <string name="enter">确定</string>
    <string name="select_all">全选</string>
    <string name="delete_shop">删除商品</string>
    <string name="enter_order">确认订单</string>
    <string name="enter_tack">确认收货</string>
    <string name="pay">立即支付</string>
    <string name="look_logistics">查看物流</string>
    <string name="reset_buy">再次购买</string>
    <string name="time_asc">按上架时间(从高到低)</string>
    <string name="num_asc">按上7日内销量(从高到低)</string>
    <string name="price">价格</string>
    <string name="confirm">确认</string>
    <string name="location_select">请选择收货地址</string>
    <string name="total_price">合计:</string>
    <string name="pay_btn">付款</string>
    <string name="checkout_counter">收银台</string>
    <string name="hot_course">热门课程</string>
    <string name="hot_hear">听过的课</string>
    <string name="course_all">全部课程</string>
    <string name="course_time">时间排序</string>
    <string name="course_bottom">到底了</string>
    <string name="groom">相关推荐</string>
    <string name="begin_play">开始播放</string>
    <string name="subscribe">订阅</string>
    <string name="course_summary">课程简介</string>
    <string name="course_contents">课程目录</string>
    <string name="course_info">基本信息</string>
    <string name="course_order">排序</string>
    <string name="subscribe_num">订阅(%1$s)</string>
    <string name="subscribe_num_y">已订阅</string>
    <string name="subscribe_num_n">未订阅(%1$s)</string>
    <string name="logistics_info">物流详情</string>
    <string name="special_list">维密专场</string>
    <string name="sale_price">特价火热进行中</string>
    <string name="live_stream">直播</string>
    <string name="live_stream_info">直播信息</string>
    <string name="course">课程</string>
    <string name="mine_course">草稿箱</string>
    <string name="mine_agent">我的代理</string>
    <string name="identification_name">姓名:</string>
    <string name="identification_phone">手机号:</string>
    <string name="mine_synopsis">个人简介</string>
    <string name="upload">确认上传</string>
    <string name="synopsis">认证信息</string>
    <string name="transcribe_course">录制语音课程</string>
    <string name="live_course">直播语音课程</string>
    <string name="school_begin">申请开课</string>
    <string name="title">标题</string>
    <string name="type">分类</string>
    <string name="create_special">创建专辑</string>
    <string name="mine_special">我的专辑</string>
    <string name="attach_special">所属专辑</string>
    <string name="pleasant_to_hear">试听</string>
    <string name="recording_room">录音室</string>
    <string name="save_draft">存草稿箱</string>
    <string name="draft">草稿箱</string>
    <string name="course_edit_label">我已阅读并同意《知识产权承诺》</string>
    <string name="course_edit_label2">温馨提示</string>
    <string name="course_edit_label3">文案很重要文案很重要文案很重要文案很重要文案很重要文案很重要文案很重要文案很重要文案很重要文案很重要文案很重要</string>
    <string name="voice">声音信息</string>
    <string name="upload_voice">上传声音</string>
    <string name="upload_course">上传课程</string>
    <string name="reset_rate">重录</string>
    <string name="tape_label1">耳机录音效果更好</string>
    <string name="count_agent">共有%1$s人</string>
    <string name="count_manager">经理%1$s人</string>
    <string name="count_hail">微客%1$s人</string>
    <string name="hail">微客</string>
    <string name="manager">经理</string>
    <string name="save_share">保存并分享密码</string>
    <string name="times">时间段</string>
    <string name="tape_label1_ing">麦克风正在录音</string>
    <string name="play_name">主讲老师 | %1$s</string>
    <string name="pause">已暂停</string>
    <string name="auditing">待审核</string>
    <string name="pass">已通过</string>
    <string name="uninstall_qq_mobile">未安装QQ客户端,请下载安装</string>
    <string name="share_success">分享成功</string>
    <string name="update_app">版本更新</string>
    <string name="update_goto">去下载</string>
    <string name="or_delete">是否删除?</string>
    <string name="permissions_camera">获取\"相机权限\"失败,将导致该功能无法正常使用,请到设置页面手动授权!</string>
    <string name="permissions_wr">获取\"存储权限\"失败,将导致该功能无法正常使用,请到设置页面手动授权!</string>
    <string name="permissions_ly">获取\"录音权限\"失败,将导致该功能无法正常使用,请到设置页面手动授权!</string>
    <string name="center_y">我知道了!</string>
    <string name="cart_none">您的购物车是空的</string>
    <string name="hot_course_none">还没有热门课程</string>
    <string name="course_none_ing">还没有听过的课</string>
    <string name="order_none">您还没有相关订单</string>
    <string name="ljx_none">没有内容</string>
    <string name="house_none">您还没有收藏商品</string>
    <string name="subscribe_none">您还没有订阅课程</string>
    <string name="location_none">您还没有收货地址</string>
    <string name="special_none">您还没有专辑</string>
    <string name="logistics_price">%1$s￥%2$s</string>
    <string name="load_finish">─── 我是有底线的 ───</string>
    <string name="location_length">抱歉,您的收货地址最多只能保存20个</string>
    <string name="take_label">提醒卖家发货</string>
    <string name="take_btn">提醒发货</string>
    <string name="search_shop_name">搜索商品名称</string>
    <string name="home_news_notice">NOTICE</string>
    <string name="home_news_care">注意</string>
    <string name="na_home_mine">我的</string>
    <string name="na_home_home">首页</string>
    <string name="na_home_type">分类</string>
    <string name="na_home_center">发现</string>

    <string-array name="order_list">
        <item>全部</item>
        <item>待付款</item>
        <item>待收货</item>
        <item>已完成</item>
    </string-array>

    <string-array name="order_states">
        <item>未付款</item>
        <item>待发货</item>
        <item>已发货</item>
        <item>已完成</item>
        <item>取消</item>
    </string-array>
</resources>