<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    android:id="@+id/layout_boot"
    android:background="@color/app_black"
    >
    <FrameLayout
        android:id="@+id/frame_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/home_bg_color"
        />

    <include layout="@layout/view_liner_h"/>
    <LinearLayout
        android:id="@+id/na_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/tv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/nav_bottom"
            android:drawableTop="@drawable/selector_nav_bottom_home"
            android:text="@string/na_home_home"
            />
        <TextView
            android:id="@+id/tv_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/nav_bottom"
            android:drawableTop="@drawable/selector_nav_bottom_type"
            android:text="@string/na_home_type"
            />
        <TextView
            android:id="@+id/tv_find"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/nav_bottom"
            android:drawableTop="@drawable/selector_nav_bottom_find"
            android:text="@string/na_home_center"
            />
        <TextView
            android:id="@+id/tv_cart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/nav_bottom"
            android:drawableTop="@drawable/selector_nav_bottom_cart"
            android:text="@string/cart"
            />

        <RelativeLayout
            android:id="@+id/layout_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/tv_mine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/selector_nav_bottom_mine"
                android:text="@string/na_home_mine"
                style="@style/nav_bottom"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                />
            <TextView
                android:id="@+id/tv_point_order"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:background="@drawable/red_point"
                android:gravity="center"
                android:text="9"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:layout_toRightOf="@+id/tv_mine"
                android:layout_marginTop="7dp"
                android:layout_marginLeft="-3dp"
                android:visibility="invisible"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                style="@style/nav_bottom"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>