<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mobile="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <com.android.wool.view.constom.MultiEditTextView
            android:id="@+id/login_phone"
            style="@style/text_black15"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp"
            android:alpha="0.5"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:singleLine="true"
            android:textColorHint="@color/edit_phone"
            android:textSize="15sp"
            android:maxLength="11"
            mobile:close_drawable="@drawable/login_delete"
            mobile:close_drawable_width="20dp"
            mobile:close_drawable_height="20dp"
            />

        <include layout="@layout/view_liner_h_m_left_right15"/>
        <com.android.wool.view.constom.MultiEditTextView
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/pwd_hing"
            android:background="@null"
            android:textColorHint="@color/edit_phone"
            android:alpha="0.5"
            style="@style/text_black15"
            android:singleLine="true"
            android:inputType="textPassword"
            mobile:close_drawable="@drawable/login_delete"
            mobile:close_drawable_width="20dp"
            mobile:close_drawable_height="20dp"
            />
        <include layout="@layout/view_liner_h_m_left_right15"/>
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/bg_login"
            android:text="@string/login"
            style="@style/text_while15"
            android:gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.5"
                android:padding="15dp"
                android:text="@string/not_pwd"
                android:textColor="@color/edit_phone"
                android:textSize="12sp" />
        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_bottom_img"
                android:layout_gravity="bottom"
                />
            <TextView
                android:id="@+id/tv_browse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/browse"
                android:textSize="12sp"
                android:layout_marginBottom="100dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/app_black"
                android:drawableRight="@drawable/home_next"
                android:drawablePadding="8dp"
                android:padding="25dp"
                android:layout_gravity="bottom|center_horizontal"
                android:gravity="center"
                />
        </FrameLayout>
    </LinearLayout>
</ScrollView>