<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        >
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/text_Brown13"
            />
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_Brown13"/>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ellipsize="end"
        android:padding="15dp"
        />
    <include layout="@layout/view_liner_h"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_default"
            style="@style/text_Brown13"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/default_location" />

        <TextView
            android:id="@+id/tv_edit"
            style="@style/text_Brown13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/edit"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:paddingRight="15dp"
            android:text="@string/edit" />

        <TextView
            android:id="@+id/tv_del"
            style="@style/text_Brown13"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableLeft="@drawable/delete"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:paddingRight="15dp"
            android:text="@string/delete" />
    </LinearLayout>

    <include layout="@layout/view_liner_h"/>
</LinearLayout>